@@ -16,7 +16,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.function.ToDoubleFunction;
-import java.util.stream.Collectors;
 
 import static com.powsybl.openloadflow.util.EvaluableConstants.NAN;
 
@@ -170,8 +169,8 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
     }
 
     @Override
-    public Optional<VoltageControl<?>> getHighestPriorityMainVoltageControl() {
-        return VoltageControl.findMainVoltageControlsSortedByPriority(this).stream().findFirst();
+    public OptionalDouble getHighestPriorityTargetV() {
+        return VoltageControl.getHighestPriorityTargetV(this);
     }
 
     @Override
@@ -230,7 +229,7 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
 
     @Override
     public List<LfGenerator> getGeneratorsControllingVoltageWithSlope() {
-        return generators.stream().filter(gen -> gen.getGeneratorControlType() == LfGenerator.GeneratorControlType.VOLTAGE && gen.getSlope() != 0).collect(Collectors.toList());
+        return generators.stream().filter(gen -> gen.getGeneratorControlType() == LfGenerator.GeneratorControlType.VOLTAGE && gen.getSlope() != 0).toList();
     }
 
     @Override
@@ -295,7 +294,11 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
     }
 
     void addLccConverterStation(LccConverterStation lccCs, LfNetworkParameters parameters) {
-        getOrCreateLfLoad(null, parameters).add(lccCs, parameters);
+        if (!HvdcConverterStations.isHvdcDanglingInIidm(lccCs, parameters)) {
+            // Note: Load is determined statically - contingencies or actions that change an LCC Station connectivity
+            // will continue to give incorrect result
+            getOrCreateLfLoad(null, parameters).add(lccCs, parameters);
+        }
     }
 
     protected void add(LfGenerator generator) {
@@ -333,21 +336,21 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
         add(LfBatteryImpl.create(generator, network, parameters, report));
     }
 
-    void setShuntCompensators(List<ShuntCompensator> shuntCompensators, LfNetworkParameters parameters) {
+    void setShuntCompensators(List<ShuntCompensator> shuntCompensators, LfNetworkParameters parameters, LfTopoConfig topoConfig) {
         if (!parameters.isShuntVoltageControl() && !shuntCompensators.isEmpty()) {
-            shunt = new LfShuntImpl(shuntCompensators, network, this, false, parameters);
+            shunt = new LfShuntImpl(shuntCompensators, network, this, false, parameters, topoConfig);
         } else {
             List<ShuntCompensator> controllerShuntCompensators = shuntCompensators.stream()
                     .filter(ShuntCompensator::isVoltageRegulatorOn)
-                    .collect(Collectors.toList());
+                    .toList();
             if (!controllerShuntCompensators.isEmpty()) {
-                controllerShunt = new LfShuntImpl(controllerShuntCompensators, network, this, true, parameters);
+                controllerShunt = new LfShuntImpl(controllerShuntCompensators, network, this, true, parameters, topoConfig);
             }
             List<ShuntCompensator> fixedShuntCompensators = shuntCompensators.stream()
                     .filter(sc -> !sc.isVoltageRegulatorOn())
-                    .collect(Collectors.toList());
+                    .toList();
             if (!fixedShuntCompensators.isEmpty()) {
-                shunt = new LfShuntImpl(fixedShuntCompensators, network, this, false, parameters);
+                shunt = new LfShuntImpl(fixedShuntCompensators, network, this, false, parameters, topoConfig);
             }
         }
     }
@@ -493,12 +496,32 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
     }
 
     @Override
+    public List<LfHvdc> getHvdcs() {
+        return hvdcs;
+    }
+
+    @Override
     public void addHvdc(LfHvdc hvdc) {
         hvdcs.add(Objects.requireNonNull(hvdc));
     }
 
-    private static ToDoubleFunction<String> splitDispatchQ(List<LfGenerator> generatorsThatControlVoltage, double qToDispatch) {
-        int size = generatorsThatControlVoltage.size();
+    private static ToDoubleFunction<String> splitDispatchQ(List<LfGenerator> generatorsWithControl, double qToDispatch) {
+        // proportional to reactive keys
+        if (allGeneratorsHaveReactiveKeys(generatorsWithControl)) {
+            return splitDispatchQWithReactiveKeys(generatorsWithControl, qToDispatch);
+        }
+
+        // fallback on dispatch q proportional to max reactive power range
+        if (allGeneratorsHavePlausibleReactiveLimits(generatorsWithControl)) {
+            return splitDispatchQFromMaxReactivePowerRange(generatorsWithControl, qToDispatch);
+        }
+
+        // fall back on dispatch q equally
+        return splitDispatchQEqually(generatorsWithControl, qToDispatch);
+    }
+
+    private static ToDoubleFunction<String> splitDispatchQEqually(List<LfGenerator> generatorsWithControl, double qToDispatch) {
+        int size = generatorsWithControl.size();
         return id -> qToDispatch / size;
     }
 
@@ -508,10 +531,10 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
      * we have to find the k value for qToDispatch
      * k = (2 * qToDispatch - qmax1 - qmin1 - qmax2 - qmin2 - ...) / (qmax1 - qmin1 + qmax2 - qmin2 + ...)
      */
-    private static ToDoubleFunction<String> splitDispatchQWithEqualProportionOfK(List<LfGenerator> generatorsThatControlVoltage, double qToDispatch) {
+    private static ToDoubleFunction<String> splitDispatchQWithEqualProportionOfK(List<LfGenerator> generatorsWithControl, double qToDispatch) {
         double k = 2 * qToDispatch;
         double denom = 0;
-        for (LfGenerator generator : generatorsThatControlVoltage) {
+        for (LfGenerator generator : generatorsWithControl) {
             k -= generator.getMaxQ() + generator.getMinQ();
             denom += generator.getMaxQ() - generator.getMinQ();
         }
@@ -519,12 +542,60 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
             k /= denom;
         }
 
-        Map<String, Double> qToDispatchByGeneratorId = new HashMap<>(generatorsThatControlVoltage.size());
-        for (LfGenerator generator : generatorsThatControlVoltage) {
+        Map<String, Double> qToDispatchByGeneratorId = new HashMap<>(generatorsWithControl.size());
+        for (LfGenerator generator : generatorsWithControl) {
             qToDispatchByGeneratorId.put(generator.getId(), LfGenerator.kToQ(k, generator));
         }
 
         return qToDispatchByGeneratorId::get;
+    }
+
+    private static ToDoubleFunction<String> splitDispatchQWithReactiveKeys(List<LfGenerator> generatorsWithControl, double qToDispatch) {
+        double sumQkeys = 0;
+        for (LfGenerator generator : generatorsWithControl) {
+            double qKey = generator.getRemoteControlReactiveKey().orElseThrow();
+            sumQkeys += qKey;
+        }
+        if (sumQkeys == 0) { // to avoid division by zero
+            sumQkeys = 1;
+        }
+
+        Map<String, Double> qToDispatchByGeneratorId = new HashMap<>(generatorsWithControl.size());
+        for (LfGenerator generator : generatorsWithControl) {
+            double qKey = generator.getRemoteControlReactiveKey().orElseThrow();
+            qToDispatchByGeneratorId.put(generator.getId(), (qKey / sumQkeys) * qToDispatch);
+        }
+
+        return qToDispatchByGeneratorId::get;
+    }
+
+    private static ToDoubleFunction<String> splitDispatchQFromMaxReactivePowerRange(List<LfGenerator> generatorsWithControl, double qToDispatch) {
+        double sumMaxRanges = 0.0;
+        for (LfGenerator generator : generatorsWithControl) {
+            double maxRangeQ = generator.getRangeQ(LfGenerator.ReactiveRangeMode.MAX);
+            sumMaxRanges += maxRangeQ;
+        }
+        if (sumMaxRanges == 0) { // to avoid division by zero
+            sumMaxRanges = 1;
+        }
+
+        Map<String, Double> qToDispatchByGeneratorId = new HashMap<>(generatorsWithControl.size());
+        for (LfGenerator generator : generatorsWithControl) {
+            double maxRangeQ = generator.getRangeQ(LfGenerator.ReactiveRangeMode.MAX);
+            qToDispatchByGeneratorId.put(generator.getId(), (maxRangeQ / sumMaxRanges) * qToDispatch);
+        }
+
+        return qToDispatchByGeneratorId::get;
+    }
+
+    private static boolean allGeneratorsHaveReactiveKeys(List<LfGenerator> generators) {
+        for (LfGenerator generator : generators) {
+            double qKey = generator.getRemoteControlReactiveKey().orElse(Double.NaN);
+            if (Double.isNaN(qKey)) {
+                return false;
+            }
+        }
+        return true;
     }
 
     private static boolean allGeneratorsHavePlausibleReactiveLimits(List<LfGenerator> generators) {
@@ -547,7 +618,7 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
             case Q_EQUAL_PROPORTION -> splitDispatchQ(generatorsWithControl, qToDispatch);
             case K_EQUAL_PROPORTION -> allGeneratorsHavePlausibleReactiveLimits(generatorsWithControl)
                     ? splitDispatchQWithEqualProportionOfK(generatorsWithControl, qToDispatch)
-                    : splitDispatchQ(generatorsWithControl, qToDispatch); // fallback to q dispatch
+                    : splitDispatchQEqually(generatorsWithControl, qToDispatch); // fallback to dispatch q equally
         };
         Iterator<LfGenerator> itG = generatorsWithControl.iterator();
         while (itG.hasNext()) {
@@ -657,6 +728,14 @@ public abstract class AbstractLfBus extends AbstractElement implements LfBus {
         }
         if (controllerShunt != null) {
             controllerShunt.setDisabled(disabled);
+        }
+        for (LfHvdc hvdc : hvdcs) {
+            if (disabled) {
+                hvdc.setDisabled(true);
+            } else if (!hvdc.getOtherBus(this).isDisabled()) {
+                // if both buses enabled only
+                hvdc.setDisabled(false);
+            }
         }
     }
 
